<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cse110m260t6.omnialarm.main_ac"
    tools:showIn="@layout/activity_main_ac"
    android:background="@drawable/star_night">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sunday"
            android:id="@+id/sunday"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/sunday_time"
            android:layout_alignBottom="@+id/sunday"
            android:layout_toRightOf="@+id/sunday"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monday"
            android:id="@+id/monday"
            android:layout_below="@+id/sunday"
            android:layout_toLeftOf="@+id/sunday_time"
            android:layout_toStartOf="@+id/sunday_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/monday_time"
            android:layout_alignTop="@+id/monday"
            android:layout_toRightOf="@+id/monday"
            android:layout_above="@+id/tuesday_time"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tuesday"
            android:id="@+id/tuesday"
            android:layout_below="@+id/monday"
            android:layout_toLeftOf="@+id/sunday_time"
            android:layout_toStartOf="@+id/sunday_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tuesday_time"
            android:layout_alignTop="@+id/tuesday"
            android:layout_toRightOf="@+id/tuesday"
            android:layout_above="@+id/wednesday_time"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday"
            android:id="@+id/wednesday"
            android:layout_below="@+id/tuesday"
            android:layout_toLeftOf="@+id/sunday_time"
            android:layout_toStartOf="@+id/sunday_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/wednesday_time"
            android:layout_below="@+id/tuesday"
            android:layout_toRightOf="@+id/tuesday"
            android:layout_above="@+id/thursday"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thursday"
            android:id="@+id/thursday"
            android:layout_below="@+id/wednesday"
            android:layout_toLeftOf="@+id/sunday_time"
            android:layout_toStartOf="@+id/sunday_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/thursday_time"
            android:layout_toRightOf="@+id/thursday"
            android:layout_alignBottom="@+id/thursday"
            android:layout_alignRight="@+id/wednesday_time"
            android:layout_alignEnd="@+id/wednesday_time"
            android:layout_alignTop="@+id/thursday"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Friday"
            android:id="@+id/friday"
            android:layout_below="@+id/thursday"
            android:layout_alignRight="@+id/thursday"
            android:layout_alignEnd="@+id/thursday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/friday_time"
            android:layout_above="@+id/saturday"
            android:layout_toRightOf="@+id/friday"
            android:layout_alignTop="@+id/friday"
            android:layout_alignRight="@+id/thursday_time"
            android:layout_alignEnd="@+id/thursday_time"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Saturday"
            android:id="@+id/saturday"
            android:layout_below="@+id/friday"
            android:layout_toLeftOf="@+id/sunday_time"
            android:layout_toStartOf="@+id/sunday_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/saturday_time"
            android:layout_alignBottom="@+id/saturday"
            android:layout_toRightOf="@+id/saturday"
            android:layout_below="@+id/friday_time"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/relativeLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add New Alarm"
            android:id="@+id/addBtn"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onPress" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete All Alarm"
            android:id="@+id/delete_alarm"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DELETE ALARM"
        android:id="@+id/delete_by_id"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
