<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Choose wake up activity"
            android:id="@+id/choose_wake_up"
            android:layout_alignRight="@+id/button3"
            android:layout_alignEnd="@+id/button3"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#BDBDBD"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Solve Math Problem"
                android:id="@+id/math"
                android:layout_gravity="center_horizontal"
                android:layout_above="@+id/reverse"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="70dp"
                android:background="#F7FE2E"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reverse String"
                android:id="@+id/reverse"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="15dp"
                android:background="#F7FE2E"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button3"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/reverse"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="15dp"
                android:background="#F7FE2E"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="                 "
                    android:id="@+id/textView4"
                    android:layout_column="11" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView3"
                    android:layout_column="15" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView5"
                    android:layout_column="15" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView6"
                    android:layout_column="15" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/activity_string"
                    android:layout_column="15"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/ringtone_string"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_column="15"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/time_string"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_column="15"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="      " />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/random"
                    android:layout_column="15" />
            </TableRow>
        </TableLayout>

    </RelativeLayout>
</LinearLayout>